Closed Bug 336236 Opened 20 years ago Closed 20 years ago

Resized images are not shown

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ria.klaassen, Assigned: vlad)

References

Details

(Keywords: regression)

Attachments

(1 file)

When I go to http://securityresponse.symantec.com/avcenter/vinfodb.html , the icon does not appear. I see an empty spot instead. This is a regression between 1.9a1_2006050115 and 1.9a1_2006050121. http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=2006-05-01+14%3A00&maxdate=2006-05-01+21%3A00
Two other icons: http://www.spywareinfo.com/bhos/ http://www.popuptest.com/ The promematic images that I (don't) see are all resized images.
And they are all .ico images.
Summary: Some images are not shown → Resized ICO images are not shown
I see also now that miniature images on tabs have this problem, for instance looking here: https://bugzilla.mozilla.org/attachment.cgi?id=220510&action=view You can see that there is no tab icon and no favicon. I don't know if this is also a ICO.
No, it's not only ICO. That was a coincidence. When I resize a JPG image in a website I see only the border.
Summary: Resized ICO images are not shown → Resized images are not shown
Status: NEW → ASSIGNED
Assignee: nobody → vladimir
Status: ASSIGNED → NEW
Attached patch fixSplinter Review
I'm not really sure what I was thinking here, with the d0x/d0y business. Fixed now.
Attachment #220538 - Flags: review?(pavlov)
Attachment #220538 - Flags: review?(pavlov) → review+
checked in
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: