b=336236, rescaled images are sometimes not shown, r=stuart